# polymarket-arbitrage

./: .env  .env.example  Cargo.toml  DEPLOY.md  README.md  arbitrage.db  monitor.py  paper_trading.py
src/: clob_ws.rs  config.rs  database.rs  gamma_api.rs  main.rs  strategy.rs  types.rs  websocket.rs
